# SmallVoxelRenderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  debug.cap
cmake/: CPM.cmake  GenerateShaderCPPFile.cmake  ShaderCompile.cmake  path.hpp.in
precompile/: pch.hpp
resources/data/: readme.txt
resources/textures/: qwantani_2k.dds
shaders/: .gitignore  CMakeLists.txt
shaders/glsl/: texture.vert
shaders/glsl/opengl/: main.frag  main.vert  marcher.frag  marcher.vert  octree_alloc_node.comp  octree_tracer.frag  octree_tracer_beam.frag  quad.frag  quad.vert  raycaster.frag  raycaster.vert  splat.frag  splat.vert  voxelize.frag  voxelize.geom  voxelize.vert  voxelizer.frag  voxelizer.geom  voxelizer.vert
shaders/glsl/vulkan/: main.frag
shaders/include/: common.glsl
voxel-renderer/: CMakeLists.txt  main.cpp
voxel-renderer/application/: renderer.hpp  voxel_renderer.hpp
voxel-renderer/core/: clock.hpp  config.hpp  defines.hpp  hash.hpp  noncopyable.hpp  object.hpp  path.hpp  public_singleton.hpp
voxel-renderer/core/impl/: stb.cpp  tiny_objloader.cpp  volk.cpp
voxel-renderer/core/math/: angle.hpp
voxel-renderer/core/meta/: is_specialization.hpp
voxel-renderer/core/raii/: pointer.hpp
voxel-renderer/core/volk/: volk.cpp
voxel-renderer/ds/svo/: config.hpp
voxel-renderer/graphics/adapters/: graphics_adapter.hpp  ogl_adapter.hpp  vk_adapter.hpp
voxel-renderer/graphics/common/: camera.hpp  common_pipeline.hpp  common_uniform_buffer.hpp  common_vertex_buffer.hpp  tables.hpp
voxel-renderer/graphics/opengl/: ogl_buffer.hpp  ogl_frambuffer.hpp  ogl_object.hpp  ogl_pipeline.hpp  ogl_render_buffer.hpp  ogl_renderpass.hpp  ogl_shader.hpp  ogl_texture.hpp  ogl_utils.hpp  ogl_vertex_array.hpp
voxel-renderer/graphics/renderer/: cpu_splatting_renderer.hpp  default_renderer.hpp  i_renderer.hpp  ubuffer_struct.hpp
voxel-renderer/gui/: render_layer.hpp  render_layer_ctx.hpp  view_holder.hpp  view_holder_ctx.hpp
voxel-renderer/gui/imgui/: imgui_ctx.hpp  imgui_layer.hpp  imgui_state.hpp
voxel-renderer/gui/imgui/adapters/: imgui_adapter.hpp  imgui_opengl_adapter.hpp  imgui_vulkan_adapter.hpp
voxel-renderer/gui/interface/: layer.hpp
voxel-renderer/gui/layers/: imgui_layer.hpp  imgui_state.hpp  layer.hpp  render_layer.hpp
voxel-renderer/gui/renderer/: cpu_splatting_renderer.hpp  default_renderer.hpp  i_renderer.hpp  marcher_renderer.hpp  point_splatting_renderer.hpp  svo_renderer.hpp  vdb_renderer.hpp  voxelized_renderer.hpp
voxel-renderer/input/: input_state.hpp  input_system.hpp  key_code.hpp
voxel-renderer/os/: file.hpp  file_service.hpp
voxel-renderer/reader/: do.hpp  image_reader.hpp  object_reader.hpp  raw_reader.hpp  read_data_types.hpp
voxel-renderer/util/: string_util.hpp
voxel-renderer/voxelizer/: config.hpp
voxel-renderer/voxelizer/voxel/: voxelizer.hpp
